--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <h1>What can Greg do!</h1>
+        <h1>What can Greg do?!</h1>
         <ul>
             <li><a href="#python_h2">Python</a></li>
             <li><a href="#sql_h2">SQL</a></li>
@@ -21,7 +21,7 @@
     <section>
         <article class="article">
             <h2 id="python_h2">Python</h2>
-            <a href="https://github.com/Olegreg762/Machine_Learning_Unsupervised">
+            <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/python_homework/PyBank">
             <img id="python_logo"  src="./resources/images/python-logo-only.svg">
             </a>            
             <p>
@@ -32,7 +32,9 @@
         </article>
         <article class="article">
             <h2 id="sql_h2">SQL</h2>
+            <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/SQL_homework">
             <img src="./resources/images/sql-database-generic.svg">
+            </a>
             <p>
             Experience in bulding and querying SQL databases
             </p>
