--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <h1>What can Greg do?!</h1>
+        <h1 id="top">What can Greg do?!</h1>
         <ul>
             <li><a href="#python_h2">Python</a></li>
             <li><a href="#sql_h2">SQL</a></li>
@@ -41,7 +41,9 @@
         </article>
         <article class="article">
             <h2 id="solidity_h2">Solidity</h2>
-            <img src="./resources/images/771px-Solidity_logo.svg.png">
+            <a href="https://github.com/Olegreg762/Group_Project_3">
+            <img id="solidity_logo" src="./resources/images/771px-Solidity_logo.svg.png">
+            </a>
             <p>
             Built and deployed solidity smart contracts. 
             Including a lending and borrowing contract.
@@ -49,22 +51,31 @@
         </article>
         <article class="article">
             <h2 id="css_h2">CSS</h2>
-            <img src="./resources/images/CSS3_logo_and_wordmark.svg">            
+            <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">
+            <img src="./resources/images/CSS3_logo_and_wordmark.svg"> 
+            </a>           
             <p>
-            Actively learning CSS language.
+            Actively learning CSS language.<br>
+            Github link to a page I refactored the CSS stylesheet.
             </p>             
         </article>         
         <article class="article">
-            <h2 id="html_h2">HTML</h2>            
+            <h2 id="html_h2">HTML</h2> 
+            <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">      
             <img src="./resources/images/HTML5_logo_and_wordmark.svg">
+            </a> 
             <p>
-            Currently pursuing knowledge of HTML
+            Currently pursuing knowledge of HTML.<br>
+            Github pages link to a webpage that I edited and refactored the HTML code.
             </p>
         </article>
     </section>
     <footer>
-        <h3 id="contact_h3">Contact: </h3>
-        <p><a href="https://github.com/Olegreg762/"> Github</a></p>        
+        <h3 id="contact_h3">Contact: 
+            <span><a href="https://github.com/Olegreg762/">Github</a></span>
+             
+        </h3>
+         <span> <a href="#top">Page Top</a> </span>      
     </footer>
 </body>
 </html>
