add avatar to header

--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./resources/style.css">
-    <title>Greg's Portfolio</title>
+    <title>Greg's Portfolio </title>
 </head>
 <body>
     <nav>
-        <h1 id="top">What can Greg do?!</h1>
+        <h1 id="top">What can Greg do?! <span> <img id="avatar" src="./resources/images/old-gregg.png"></span></h1>
         <ul>
             <li><a href="#python_h2">Python</a></li>
             <li><a href="#sql_h2">SQL</a></li>
