css footer center/ html avatar below h1

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
     <nav>
-        <h1 id="top">What can Greg do?! <span> <img id="avatar" src="./resources/images/old-gregg.png"></span></h1>
+        <h1 id="top">What can Greg do?!</h1>
+        <img id="avatar" src="./resources/images/old-gregg.png">
         <ul>
             <li><a href="#python_h2">Python</a></li>
             <li><a href="#sql_h2">SQL</a></li>
