css hover styling to <img> & <a> add links to html

--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <title>Greg's Portfolio </title>
 </head>
 <body>
-    <nav>
+    <header>
         <h1 id="top">What can Greg do?!</h1>
+        <a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">
         <img id="avatar" src="./resources/images/old-gregg.png">
+        </a>
         <ul>
             <li><a href="#python_h2">Python</a></li>
             <li><a href="#sql_h2">SQL</a></li>
@@ -18,7 +20,7 @@
             <li><a href="#html_h2">HTML</a></li>
             <li><a href="#contact_h3">Contact</a></li>
         </ul>
-    </nav>
+    </header>
     <section>
         <article class="article">
             <h2 id="python_h2">Python</h2>
@@ -72,9 +74,11 @@
         </article>
     </section>
     <footer>
-        <h3 id="contact_h3">Contact: 
+        <h3 id="contact_h3">Contact : 
             <span><a href="https://github.com/Olegreg762/">Github</a></span>
-             
+            |
+            <span><a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">Linkedin</a></span>
+            |
         </h3>
          <span> <a href="#top">Page Top</a> </span>      
     </footer>
