comments to css and add alt tags to img

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1 id="top">What can Greg do?!</h1>
         <a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">
-        <img id="avatar" src="./resources/images/old-gregg.png">
+        <img id="avatar" src="./resources/images/old-gregg.png" alt="avatar">
         </a>
         <ul>
             <li><a href="#python_h2">Python</a></li>
@@ -25,7 +25,7 @@
         <article class="article">
             <h2 id="python_h2">Python</h2>
             <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/python_homework/PyBank">
-            <img id="python_logo"  src="./resources/images/python-logo-only.svg">
+            <img id="python_logo"  src="./resources/images/python-logo-only.svg" alt="python logo">
             </a>            
             <p>
             I have written several programs and scripts in Python.<br>
@@ -36,7 +36,7 @@
         <article class="article">
             <h2 id="sql_h2">SQL</h2>
             <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/SQL_homework">
-            <img src="./resources/images/sql-database-generic.svg">
+            <img src="./resources/images/sql-database-generic.svg" alt="sql logo">
             </a>
             <p>
             Experience in bulding and querying SQL databases
@@ -45,7 +45,7 @@
         <article class="article">
             <h2 id="solidity_h2">Solidity</h2>
             <a href="https://github.com/Olegreg762/Group_Project_3">
-            <img id="solidity_logo" src="./resources/images/771px-Solidity_logo.svg.png">
+            <img id="solidity_logo" src="./resources/images/771px-Solidity_logo.svg.png" alt="solidity logo">
             </a>
             <p>
             Built and deployed solidity smart contracts. 
@@ -55,7 +55,7 @@
         <article class="article">
             <h2 id="css_h2">CSS</h2>
             <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">
-            <img src="./resources/images/CSS3_logo_and_wordmark.svg"> 
+            <img src="./resources/images/CSS3_logo_and_wordmark.svg" alt="css logo"> 
             </a>           
             <p>
             Actively learning CSS language.<br>
@@ -65,7 +65,7 @@
         <article class="article">
             <h2 id="html_h2">HTML</h2> 
             <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">      
-            <img src="./resources/images/HTML5_logo_and_wordmark.svg">
+            <img src="./resources/images/HTML5_logo_and_wordmark.svg" alt="html logo">
             </a> 
             <p>
             Currently pursuing knowledge of HTML.<br>
