--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- Style sheet linked to page -->
     <link rel="stylesheet" href="./resources/css/style.css">
     <title>Greg's Portfolio </title>
 </head>
 <body>
+    <!-- Header for page -->
     <header>
         <h1 id="top">What can Greg do?!</h1>
         <a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">
         <img id="avatar" src="./resources/images/old-gregg.png" alt="avatar">
         </a>
         <ul>
+            <!-- Links for page navigation -->
             <li><a href="#python_h2">Python</a></li>
             <li><a href="#sql_h2">SQL</a></li>
             <li><a href="#solidity_h2"_h2>Solidity</a></li>
@@ -21,9 +24,12 @@
             <li><a href="#contact_h3">Contact</a></li>
         </ul>
     </header>
-    <section>
+    <!-- Main Content of page -->
+    <main>
+        <!-- Python artice -->
         <article class="article">
             <h2 id="python_h2">Python</h2>
+            <!-- Python logo image with link to Github -->
             <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/python_homework/PyBank">
             <img id="python_logo"  src="./resources/images/python-logo-only.svg" alt="python logo">
             </a>            
@@ -33,8 +39,10 @@
             I also have used Pyscript and Streamlit Lite to build web apps.
             </p>            
         </article>
+        <!-- SQL article -->
         <article class="article">
             <h2 id="sql_h2">SQL</h2>
+            <!-- SQL logo imagee with a Github link -->
             <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/SQL_homework">
             <img src="./resources/images/sql-database-generic.svg" alt="sql logo">
             </a>
@@ -42,7 +50,9 @@
             Experience in bulding and querying SQL databases
             </p>
         </article>
+        <!-- Solidity article -->
         <article class="article">
+            <!-- Solidity logo image with Github link -->
             <h2 id="solidity_h2">Solidity</h2>
             <a href="https://github.com/Olegreg762/Group_Project_3">
             <img id="solidity_logo" src="./resources/images/771px-Solidity_logo.svg.png" alt="solidity logo">
@@ -52,8 +62,10 @@
             Including a lending and borrowing contract.
             </p>
         </article>
+        <!-- CSS article -->
         <article class="article">
             <h2 id="css_h2">CSS</h2>
+            <!-- CSS logo image with Github link -->
             <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">
             <img src="./resources/images/CSS3_logo_and_wordmark.svg" alt="css logo"> 
             </a>           
@@ -61,9 +73,11 @@
             Actively learning CSS language.<br>
             Github link to a page I refactored the CSS stylesheet.
             </p>             
-        </article>         
+        </article>
+        <!-- HTML article -->
         <article class="article">
             <h2 id="html_h2">HTML</h2> 
+            <!-- HTML logo imgae with Github link -->
             <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">      
             <img src="./resources/images/HTML5_logo_and_wordmark.svg" alt="html logo">
             </a> 
@@ -72,12 +86,17 @@
             Github pages link to a webpage that I edited and refactored the HTML code.
             </p>
         </article>
-    </section>
+    </main>
+    <!-- Footer of page -->
     <footer>
         <h3 id="contact_h3">Contact : 
+            <!-- Span inside footer with Github link -->
             <span><a href="https://github.com/Olegreg762/">Github</a></span>
+            <!-- Sperator for spans -->
             |
+            <!-- Span inside foot with Linkedin link -->
             <span><a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">Linkedin</a></span>
+            <!-- Sperator for spans -->
             |
         </h3>
          <span> <a href="#top">Page Top</a> </span>      
