begin update to sections branch

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </a>
         <ul>
             <!-- Links for page navigation -->
+            <li><a href="about_me">About_Me</a></li>
             <li><a href="#python_h2">Python</a></li>
             <li><a href="#sql_h2">SQL</a></li>
             <li><a href="#solidity_h2"_h2>Solidity</a></li>
@@ -27,6 +28,9 @@
     <!-- Main Content of page -->
     <main>
         <!-- Python artice -->
+        <article>
+            <h2>About Me</h2>
+        </article>
         <article class="article">
             <h2 id="python_h2">Python</h2>
             <!-- Python logo image with link to Github -->
