add about me & my work sections, updt readme & css

--- a/index.html
+++ b/index.html
@@ -16,84 +16,93 @@
         </a>
         <ul>
             <!-- Links for page navigation -->
-            <li><a href="about_me">About_Me</a></li>
-            <li><a href="#python_h2">Python</a></li>
-            <li><a href="#sql_h2">SQL</a></li>
-            <li><a href="#solidity_h2"_h2>Solidity</a></li>
-            <li><a href="#css_h2">CSS</a></li>
-            <li><a href="#html_h2">HTML</a></li>
-            <li><a href="#contact_h3">Contact</a></li>
+            <li><a href="#about_me">About_Me</a></li>
+            <li><a href="#contact_h4">Contact</a></li><br>
+            <li><a href="#work">My_Work</a></li>:
+            <li><a href="#python_h3">Python</a></li>
+            <li><a href="#sql_h3">SQL</a></li>
+            <li><a href="#solidity_h3">Solidity</a></li>
+            <li><a href="#css_h3">CSS</a></li>
+            <li><a href="#html_h3">HTML</a></li>
+            
         </ul>
     </header>
     <!-- Main Content of page -->
     <main>
         <!-- Python artice -->
         <article>
-            <h2>About Me</h2>
-        </article>
-        <article class="article">
-            <h2 id="python_h2">Python</h2>
-            <!-- Python logo image with link to Github -->
-            <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/python_homework/PyBank">
-            <img id="python_logo"  src="./resources/images/python-logo-only.svg" alt="python logo">
-            </a>            
-            <p>
-            I have written several programs and scripts in Python.<br>
-            These programs have used Python libaries such as Pandas, Web3, Streamlit, Scikit-Learn.<br>
-            I also have used Pyscript and Streamlit Lite to build web apps.
-            </p>            
-        </article>
-        <!-- SQL article -->
-        <article class="article">
-            <h2 id="sql_h2">SQL</h2>
-            <!-- SQL logo imagee with a Github link -->
-            <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/SQL_homework">
-            <img src="./resources/images/sql-database-generic.svg" alt="sql logo">
-            </a>
-            <p>
-            Experience in bulding and querying SQL databases
+            <h2 id="about_me">About Me</h2>
+            <p id="about_p">
+            I am currently working on my education to make a career pivot into the tech industry.<br>
+            I have already completed the UofM Fintech Bootcamp and currently in the Full Stack Bootcamp.<br>
             </p>
         </article>
-        <!-- Solidity article -->
-        <article class="article">
-            <!-- Solidity logo image with Github link -->
-            <h2 id="solidity_h2">Solidity</h2>
-            <a href="https://github.com/Olegreg762/Group_Project_3">
-            <img id="solidity_logo" src="./resources/images/771px-Solidity_logo.svg.png" alt="solidity logo">
-            </a>
-            <p>
-            Built and deployed solidity smart contracts. 
-            Including a lending and borrowing contract.
-            </p>
-        </article>
-        <!-- CSS article -->
-        <article class="article">
-            <h2 id="css_h2">CSS</h2>
-            <!-- CSS logo image with Github link -->
-            <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">
-            <img src="./resources/images/CSS3_logo_and_wordmark.svg" alt="css logo"> 
-            </a>           
-            <p>
-            Actively learning CSS language.<br>
-            Github link to a page I refactored the CSS stylesheet.
-            </p>             
-        </article>
-        <!-- HTML article -->
-        <article class="article">
-            <h2 id="html_h2">HTML</h2> 
-            <!-- HTML logo imgae with Github link -->
-            <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">      
-            <img src="./resources/images/HTML5_logo_and_wordmark.svg" alt="html logo">
-            </a> 
-            <p>
-            Currently pursuing knowledge of HTML.<br>
-            Github pages link to a webpage that I edited and refactored the HTML code.
-            </p>
-        </article>
+        <section>
+            <h2 id="work">My Work</h2>
+            <article class="article">
+                <h3 id="python_h3">Python</h3>
+                <!-- Python logo image with link to Github -->
+                <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/python_homework/PyBank">
+                <img id="python_logo"  src="./resources/images/python-logo-only.svg" alt="python logo">
+                </a>            
+                <p>
+                I have written several programs and scripts in Python.<br>
+                These programs have used Python libaries such as Pandas, Web3, Streamlit, Scikit-Learn.<br>
+                I also have used Pyscript and Streamlit Lite to build web apps.
+                </p>            
+            </article>
+            <!-- SQL article -->
+            <article class="article">
+                <h3 id="sql_h3">SQL</h3>
+                <!-- SQL logo imagee with a Github link -->
+                <a href="https://github.com/Olegreg762/FintechBootcamp/tree/main/SQL_homework">
+                <img src="./resources/images/sql-database-generic.svg" alt="sql logo">
+                </a>
+                <p>
+                Experience in bulding and querying SQL databases
+                </p>
+            </article>
+            <!-- Solidity article -->
+            <article class="article">
+                <!-- Solidity logo image with Github link -->
+                <h3 id="solidity_h3">Solidity</h3>
+                <a href="https://github.com/Olegreg762/Group_Project_3">
+                <img id="solidity_logo" src="./resources/images/771px-Solidity_logo.svg.png" alt="solidity logo">
+                </a>
+                <p>
+                Built and deployed solidity smart contracts. 
+                Including a lending and borrowing contract.
+                </p>
+            </article>
+            <!-- CSS article -->
+            <article class="article">
+                <h3 id="css_h3">CSS</h3>
+                <!-- CSS logo image with Github link -->
+                <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">
+                <img src="./resources/images/CSS3_logo_and_wordmark.svg" alt="css logo"> 
+                </a>           
+                <p>
+                Actively learning CSS language.<br>
+                Github link to a page I refactored the CSS stylesheet.
+                </p>             
+            </article>
+            <!-- HTML article -->
+            <article class="article">
+                <h3 id="html_h3">HTML</h3> 
+                <!-- HTML logo imgae with Github link -->
+                <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">      
+                <img src="./resources/images/HTML5_logo_and_wordmark.svg" alt="html logo">
+                </a> 
+                <p>
+                Currently pursuing knowledge of HTML.<br>
+                Github pages link to a webpage that I edited and refactored the HTML code.
+                </p>
+            </article>
+        </section>
     </main>
     <!-- Footer of page -->
     <footer>
-        <h3 id="contact_h3">Contact : 
+        <h4 id="contact_h4">Contact : 
             <!-- Span inside footer with Github link -->
             <span><a href="https://github.com/Olegreg762/">Github</a></span>
             <!-- Sperator for spans -->
@@ -102,7 +111,7 @@
             <span><a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">Linkedin</a></span>
             <!-- Sperator for spans -->
             |
-        </h3>
+        </h4>
          <span> <a href="#top">Page Top</a> </span>      
     </footer>
 </body>
