add javascript to portfolio

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
             <li><a href="#python_h3">Python</a></li>
             <li><a href="#sql_h3">SQL</a></li>
             <li><a href="#solidity_h3">Solidity</a></li>
+            <li><a href="#javascript_h3">Javascript</a></li>
             <li><a href="#css_h3">CSS</a></li>
             <li><a href="#html_h3">HTML</a></li>
             
@@ -74,11 +75,23 @@
                 Including a lending and borrowing contract.
                 </p>
             </article>
+            <!-- Javascript article -->
+            <article class="article">
+                <h3 id="javascript_h3">Javascript</h3>
+                <!-- Javascript logo image with Github link -->
+                <a href="https://olegreg762.github.io/Password_Generator/">
+                <img src="./resources/images/JavaScript-logo.png" alt="javascript logo"> 
+                </a>           
+                <p>
+                Actively learning the Javascript language.<br>
+                Github pages link to a password generator I built.
+                </p>
+            </article>
             <!-- CSS article -->
             <article class="article">
                 <h3 id="css_h3">CSS</h3>
                 <!-- CSS logo image with Github link -->
-                <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">
+                <a href="https://olegreg762.github.io/Code-Refactor/">
                 <img src="./resources/images/CSS3_logo_and_wordmark.svg" alt="css logo"> 
                 </a>           
                 <p>
@@ -90,12 +103,14 @@
             <article class="article">
                 <h3 id="html_h3">HTML</h3> 
                 <!-- HTML logo imgae with Github link -->
-                <a href="https://olegreg762.github.io/01-Challenge-Code-Refactor/">      
+                <a href="https://olegreg762.github.io/Full_Stack_GroupProject1/">      
                 <img src="./resources/images/HTML5_logo_and_wordmark.svg" alt="html logo">
                 </a> 
                 <p>
                 Currently pursuing knowledge of HTML.<br>
-                Github pages link to a webpage that I edited and refactored the HTML code.
+                Github pages link to a web app I built as part of a group.<br>
+                The web app is used to get all the Nation Parks in a chosen state.<br>
+                Once a state is chosen you will see information about the park and the Air Quality of the park.
                 </p>
             </article>
         </section>
