added group project 3

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="#javascript_h3">Javascript</a></li>
             <li><a href="#css_h3">CSS</a></li>
             <li><a href="#html_h3">HTML</a></li>
+            <li><a href="handlebars_h3">Handlebars</a></li>
             
         </ul>
     </header>
@@ -111,6 +112,19 @@
                 Github pages link to a web app I built as part of a group.<br>
                 The web app is used to get all the Nation Parks in a chosen state.<br>
                 Once a state is chosen you will see information about the park and the Air Quality of the park.
+                </p>
+            </article>
+            <article class="article">
+                <h3 id="handlebars_h3">Handlebars</h3> 
+                <!-- HTML logo imgae with Github link -->
+                <a href="https://expense-tracker96-1fc2134dee6d.herokuapp.com/">      
+                <img src="./resources/images/handlebars.webp" alt="html logo">
+                </a> 
+                <p>
+                I am building skills with handlebars.js.<br>
+                <a class="github-link" href="https://github.com/Olegreg762/Full-Stack-Group-Project-2">Github</a> link for a group project.<br>
+                The link in the handlebars logo will take you to the app that is deployed on Heroku.<br>
+                The app is an expense tracker that is built on the MVC paradigm.
                 </p>
             </article>
         </section>
