add github and linkedin to nav bar

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
     <!-- Header for page -->
     <header>
         <h1 id="top">What can Greg do?!</h1>
-        <a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">
-        <img id="avatar" src="./resources/images/old-gregg.png" alt="avatar">
+            <a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">
+            <img id="avatar" src="./resources/images/old-gregg.png" alt="avatar">
         </a>
         <ul>
             <!-- Links for page navigation -->
             <li><a href="#about_me">About_Me</a></li>
-            <li><a href="#contact_h4">Contact</a></li><br>
+            <li><a href="#contact_h4">Contact</a></li>
+            <li><a href="https://www.linkedin.com/in/greg-stevenson-422931a9/">Linkedin</a></li>
+            <li><a href="https://github.com/Olegreg762/">Github</a></li><br>
             <li><a href="#work">My_Work</a></li>:
             <li><a href="#python_h3">Python</a></li>
             <li><a href="#sql_h3">SQL</a></li>
